--- a/src/Car/Car.css
+++ b/src/Car/Car.css
@@ -6,3 +6,22 @@
   box-shadow: 0 4px 5px 0 rgba(0, 0, 0, .14);
   border-radius: 10px
 }
+
+.input {}
+
+.input:active, .input:focus {
+  outline: none;
+}
+
+.input.green {
+  border: 2px solid rgb(133, 210, 18);
+}
+
+.input.red {
+  border: 2px solid rgb(210, 58, 58);
+}
+
+.input.bold {
+  border: 6px solid rgb(133, 210, 18);
+  font-weight: bold;
+}
