--- a/src/Car/Car.css
+++ b/src/Car/Car.css
@@ -1,10 +1,17 @@
 .Car {
-  border: 1px solid #ccc;
   margin-bottom: 10px;
   display: inline-block;
   padding: 10px;
-  box-shadow: 0 4px 5px 0 rgba(0, 0, 0, .14);
-  border-radius: 10px
+  border-radius: 10px;
+  -webkit-transition: all 0.3s ease;
+  -moz-transition: all 0.3s ease;;
+  -o-transition: all 0.3s ease;;
+  transition: all 0.3s ease;
+}
+
+.Car:hover {
+  background:#53ea93;
+  cursor: pointer;
 }
 
 .input {}
@@ -22,6 +29,6 @@
 }
 
 .input.bold {
-  border: 6px solid rgb(133, 210, 18);
+  border: 6px solid rgb(32, 45, 161);
   font-weight: bold;
 }
